src/metrics/snapshots/big_code_analysis__metrics__exit__tests__tcl_multiple_returns.snap
---
source: src/metrics/exit.rs
expression: metric.nexits
---
{
  "sum": 2,
  "average": 2.0,
  "min": 0,
  "max": 2
}
