src/metrics/snapshots/big_code_analysis__metrics__exit__tests__tcl_return.snap
---
source: src/metrics/exit.rs
expression: metric.nexits
---
{
  "sum": 1,
  "average": 1.0,
  "min": 0,
  "max": 1
}
