src/metrics/snapshots/big_code_analysis__metrics__exit__tests__typescript_nested_functions.snap
---
source: src/metrics/exit.rs
expression: metric.nexits
---
{
  "sum": 2.0,
  "average": 1.0,
  "min": 0.0,
  "max": 1.0
}
